Bug 1250076 - [TV][2.5] "Learn how to send tabs from your Android" button overlaps "Done"

--- a/style/index.css
+++ b/style/index.css
@@ -120,7 +120,7 @@ a {
 }
 
 .slide-button {
-  margin-left: 4rem;
+  margin-left: 7.5rem;
 }
 
 .slide-button:first-child {
